# maya-cmake-template

./: CMakeLists.txt  README.md  sampleCommand.cc
